# redisgraph-cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  fraud_service.proto
cmake/: FindGRPC.cmake
demo/: link_analysis.txt  main.cpp
include/: fds.hpp  fds.ipp  redisgraph.hpp
include/redisgraph/: connection_context.hpp  edge.hpp  graph.hpp  json_node.hpp  namepair.hpp  node.hpp  node_hash.hpp  path.hpp  redis_context.hpp  redis_executor.hpp  result_set.hpp  result_view.hpp  resultset.hpp  row_item.hpp  siphash.hpp
include/redisgraph-cpp/: graph.hpp
include/redisgraph/exception/: connection_exception.hpp
proto-generated/: fraud_service.grpc.pb.cc  fraud_service.grpc.pb.h  fraud_service.pb.cc  fraud_service.pb.h
protopy-generated/: fraud_service_pb2.py  fraud_service_pb2_grpc.py  generate_transactions.py
src/: CMakeLists.txt  graph.cpp
test/: 01-connection.cpp  01-initgraph.cpp  02-edgegraph.cpp  03-redisconnection.cpp  04-redisquerygraph.cpp  CMakeLists.txt  test_graph.cpp
