SET (BASE_REDIS_SRC "../include/redisgraph")
file(GLOB redisgraphapi_SRCS ${BASE_REDIS_SRC}/*.hpp)
find_package(range-v3 CONFIG REQUIRED)
find_package(Boost REQUIRED)

SET (redisgraphapi_LIBS ${Boost_LIBRARIES} concepts range-v3)
SET (redisgraphapi_BIN ${PROJECT_NAME})
message(STATUS "Compiling API Files: ${redisgraphapi_SRCS}")

IF (NOT DEFINED redisgraphapi_build_shared)
   IF (CMAKE_CROSSCOMPILING)
       SET(redisgraphapi_build_shared 0)
   ELSE (CMAKE_CROSSCOMPILING)
       SET(redisgraphapi_build_shared 1)
   ENDIF (CMAKE_CROSSCOMPILING)
ENDIF (NOT DEFINED redisgraphapi_build_shared)

IF (NOT DEFINED redisgraphapi_build_static)
   SET(redisgraphapi_build_static 1)
ENDIF (NOT DEFINED redisgraphapi_build_static)

IF (redisgraphapi_build_static)
	ADD_LIBRARY(redisgraphapistatic STATIC ${redisgraphapi_SRCS})
	TARGET_LINK_LIBRARIES(redisgraphapistatic ${redisgraphapi_LIBS})
	SET_TARGET_PROPERTIES(redisgraphapistatic PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${redisgraphapi_BIN} CLEAN_DIRECT_OUTPUT 1 LINKER_LANGUAGE CXX)
	INSTALL(TARGETS redisgraphapistatic DESTINATION lib)
ENDIF(redisgraphapi_build_static)

IF (redisgraphapi_build_shared)
	ADD_LIBRARY(redisgraphapishared SHARED ${redisgraphapi_SRCS})
	TARGET_LINK_LIBRARIES(redisgraphapishared ${redisgraphapi_LIBS} )
	SET_TARGET_PROPERTIES(redisgraphapishared PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${redisgraphapi_BIN} CLEAN_DIRECT_OUTPUT 1 LINKER_LANGUAGE CXX)
	INSTALL(TARGETS redisgraphapishared DESTINATION lib)
ENDIF(redisgraphapi_build_shared)
